# Alura-Django-REST-API

./: .gitignore  LICENSE  pyproject.toml  readme.md
escola/: admin.py  views.py
escola/migrations/: 0002_alter_curso_nivel.py
