[tool.poetry]
name = "drf-escola-api-aula-1"
version = "0.1.0"
description = ""
authors = ["Sander Toledo <sanderaugusto@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_escola_api_aula_1"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
